--- a/ssis_app/static/style.css
+++ b/ssis_app/static/style.css
@@ -360,6 +360,7 @@ nav li:hover {
     position: relative;
     transition:  0.7s;
     background-size: 200%;
+    text-decoration: none;
 }
 .btn.btn1 {
     position: relative;
@@ -380,8 +381,121 @@ nav li:hover {
 
 
 /* dropdown */
-
-  
+.course-select-menu {
+    width: 450px;
+    margin: 150px auto;
+    position: absolute;
+    top: 245px;
+    left: 315px;
+}
+.course-select-menu .select-btn {
+    border-radius: 5px;
+    display: flex;
+    height: 5px;
+    color: #bfbdbeab;
+    background: white;
+    padding: 20px;
+    font-size: 18px;
+    font-weight: 400;
+    border-radius: 8px;
+    align-items: center;
+    cursor: pointer;
+    justify-content: space-between;
+    border: 2px solid gainsboro;
+}
+.select-btn i{
+    font-size: 25px;
+    transition: 0.3s;
+}
+.course-select-menu.active .select-btn i {
+    transform: rotate(-180deg);
+}
+.course-select-menu.options {
+    position: 20px;
+    margin-top: 10px;
+    border-radius: 8px;
+    background: white;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    display: none;
+}
+.course-select-menu.active .options {
+    display: block;
+}
+.options .option{
+    display: flex;
+    height: 55px;
+    cursor: pointer;
+    padding: 0 16px;
+    border-radius: 8px;
+    align-items: center;
+    background: white;
+}
+.options .option:hover {
+    background: #f2f2f2;
+}
+.option i {
+    font-size: 25px;
+    margin-right: 12px;
+}
+.option .option-text {
+    font-size: 18px;
+    color: #333;
+}
 
 
 /* list styles */
+/* header */
+.header {
+    top: 125px;
+    left: 20px;
+    position: absolute;
+}
+/* table */
+table {
+    font-family: Arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+.table-container {
+    position: relative; 
+    top: 165px; 
+    margin-right: 20px; 
+    margin-left: 20px;      
+}
+
+th, td {
+    border: 1px solid #ddd;
+    text-align: center;
+    padding: 20px;
+}
+
+tr:nth-child(even) {
+    background-color: var(--pinkC);
+}
+
+th {
+    background-color: var(--pinkA);
+    color: white;
+}
+.custom-edit-button {
+    border: none;
+    padding: 8px 26px;
+    font-size: 15px;
+    border-radius: 5px;
+    background-color: #FFBF00;
+    color: white;
+    position: relative;
+    background-size: 200%;
+    text-decoration: none;
+}
+.custom-delete-button {
+    border: none;
+    padding: 8px 26px;
+    font-size: 15px;
+    border-radius: 5px;
+    background-color: orangered;
+    color: white;
+    position: relative;
+    background-size: 200%;
+    text-decoration: none;
+}
