--- a/ssis_app/templates/base.html
+++ b/ssis_app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock title %} SSIS</title>
+    <title>{% block title %}SSIS{% endblock title %}</title>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,5 +23,6 @@
     <footer>
         <div class="footer rect">Copyright © 2023 Paragoso</div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
