--- a/ssis_app/templates/home.html
+++ b/ssis_app/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}SSIS | HOME{% endblock title %}
 {% block content %}
 <a href="{{ url_for('student') }}">
         <div class="left rectangle"></div>
