--- a/ssis_app/templates/add_course.html
+++ b/ssis_app/templates/add_course.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-
+{% block title %}SSIS | COURSE{% endblock title %}
 {% block content %}
 <nav>
     <ul>
-        <li class="current tab"><a href="{{ url_for('college') }}">COLLEGE</a></li>
-        <li><a href="{{ url_for('course') }}">COURSE</a></li>
+        <li><a href="{{ url_for('college') }}">COLLEGE</a></li>
+        <li class="current tab"><a href="{{ url_for('course') }}">COURSE</a></li>
         <li><a href="{{ url_for('student') }}">STUDENT</a></li>
     </ul>
 </nav>
