--- a/ssis_app/templates/college_list.html
+++ b/ssis_app/templates/college_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}SSIS | COLLEGE{% endblock title %}
 {% block content %}
 <nav>
     <ul>
@@ -8,5 +8,43 @@
         <li><a href="{{ url_for('student') }}">STUDENT</a></li>
     </ul>
 </nav>
+
+<h3 class="header">LIST OF COLLEGES</h3>
+
+<div class="table-container">
+    <table>
+        <tr>
+            <th>CODE</th>
+            <th>COLLEGE</th>
+            <th>ACTION</th>
+        </tr>
+        <tr>
+            <td>CCS</td>
+            <td>COLLEGE OF COMPUTER STUDIES</td>
+            <td>
+
+                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
+                <a href="#" class="custom-delete-button">DELETE</a>
+            
+            </td>
+        </tr>
+        <tr>
+            <td>COET</td>
+            <td>COLLEGE OF ENGINEERING</td>
+            <td>
+                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
+                <a href="#" class="custom-delete-button">DELETE</a>
+            </td>
+        </tr>
+        <tr>
+            <td>CON</td>
+            <td>COLLEGE OF NURSING</td>
+            <td>
+                <a href="#" class="custom-edit-button" style="margin-right: 60px;">EDIT</a>
+                <a href="#" class="custom-delete-button">DELETE</a>
+            </td>
+        </tr>
+    </table>
+</div>
 
 {% endblock %}  
