--- a/ssis_app/templates/college_list.html
+++ b/ssis_app/templates/college_list.html
@@ -10,6 +10,11 @@
 </nav>
 
 <h3 class="header">LIST OF COLLEGES</h3>
+<div class="search-bar">
+    <input type="text" placeholder="SEARCH">
+    <button type="submit"><i class="fa fa-search"></i></button>
+</div>
+<a href="#" class="custom-add-button">+ ADD COLLEGE</a>
 
 <div class="table-container">
     <table>
