--- a/ssis_app/templates/student_list.html
+++ b/ssis_app/templates/student_list.html
@@ -10,6 +10,11 @@
 </nav>
 
 <h3 class="header">LIST OF STUDENTS</h3>
+<div class="search-bar">
+    <input type="text" placeholder="SEARCH">
+    <button type="submit"><i class="fa fa-search"></i></button>
+</div>
+<a href="#" class="custom-add-button">+ ADD STUDENT</a>
 
 <div class="table-container">
     <table>
@@ -26,7 +31,7 @@
             <td>2021-1574</td>
             <td>EDA GRACE</td>
             <td>PARAGOSO</td>
-            <td>CCS</td>
+            <td>CS</td>
             <td>3RD YEAR</td>
             <td>FEMALE</td>
             <td>
@@ -40,7 +45,7 @@
             <td>2021-2393</td>
             <td>MARK FRANCIS</td>
             <td>VENUS</td>
-            <td>CCS</td>
+            <td>CS</td>
             <td>3RD YEAR</td>
             <td>MALE</td>
             <td>
@@ -52,7 +57,7 @@
             <td>2021-0622</td>
             <td>NANCY</td>
             <td>SAYSON</td>
-            <td>CCS</td>
+            <td>CS</td>
             <td>3RD YEAR</td>
             <td>FEMALE</td>
             <td>
