--- a/ssis_app/templates/base.html
+++ b/ssis_app/templates/base.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="{{ url_for('home') }}">
+        <a href="{{ url_for('index') }}">
             <div class="logo style"></div>
             <div class="main logo">STUDENT INFORMATION SYSTEM</div>
         </a>
