--- a/ssis_app/templates/add_college.html
+++ b/ssis_app/templates/add_college.html
@@ -3,17 +3,17 @@
 {% block content %}
 <nav>
     <ul>
-        <li class="current tab"><a href="{{ url_for('college') }}">COLLEGE</a></li>
-        <li><a href="{{ url_for('course') }}">COURSE</a></li>
-        <li><a href="{{ url_for('student') }}">STUDENT</a></li>
+        <li class="current tab"><a href="{{ url_for('college.index') }}">COLLEGE</a></li>
+        <li><a href="{{ url_for('course.index') }}">COURSE</a></li>
+        <li><a href="{{ url_for('student.index') }}">STUDENT</a></li>
     </ul>
 </nav>
 
 <div class="addentity bg"></div>
-<div class="backicon"><a href="{{ url_for('college') }}"><img src="{{ url_for('static', filename='images/back-icon.png') }}"></a></div>
+<div class="backicon"><a href="{{ url_for('college.college_list') }}"><img src="{{ url_for('static', filename='images/back-icon.png') }}"></a></div>
 <div class="addentityheading">ADD COLLEGE</div>
 
-<form action="/college/add_college" method="POST">
+<form action="/college/add" method="POST">
     {{ college_form.csrf_token }}
     <div class="inputBox code">
         <input type="text" required="required" name="college_code">
