--- a/ssis_app/templates/add_student.html
+++ b/ssis_app/templates/add_student.html
@@ -3,14 +3,14 @@
 {% block content %}
 <nav>
     <ul>
-        <li><a href="{{ url_for('college') }}">COLLEGE</a></li>
-        <li><a href="{{ url_for('course') }}">COURSE</a></li>
-        <li class="current tab"><a href="{{ url_for('student') }}">STUDENT</a></li>
+        <li><a href="{{ url_for('college.index') }}">COLLEGE</a></li>
+        <li><a href="{{ url_for('course.index') }}">COURSE</a></li>
+        <li class="current tab"><a href="{{ url_for('student.index') }}">STUDENT</a></li>
     </ul>
 </nav>
 
 <div class="addentity bg"></div>
-<div class="backicon"><a href="{{ url_for('student') }}"><img src="{{ url_for('static', filename='images/back-icon.png') }}"></a></div>
+<div class="backicon"><a href="{{ url_for('student.student_list') }}"><img src="{{ url_for('static', filename='images/back-icon.png') }}"></a></div>
 <div class="addentityheading">ADD STUDENT</div>
 
 <div class="inputBox id">
