--- a/ssis_app/templates/student_list.html
+++ b/ssis_app/templates/student_list.html
@@ -3,9 +3,9 @@
 {% block content %}
 <nav>
     <ul>
-        <li><a href="{{ url_for('college') }}">COLLEGE</a></li>
-        <li> <a href="{{ url_for('course') }}">COURSE</a></li>
-        <li class="current tab"><a href="{{ url_for('student') }}">STUDENT</a></li>
+        <li><a href="{{ url_for('college.index') }}">COLLEGE</a></li>
+        <li> <a href="{{ url_for('course.index') }}">COURSE</a></li>
+        <li class="current tab"><a href="{{ url_for('student.index') }}">STUDENT</a></li>
     </ul>
 </nav>
 
@@ -14,7 +14,7 @@
     <input type="text" placeholder="SEARCH">
     <button type="submit"><i class="fa fa-search"></i></button>
 </div>
-<a href="#" class="custom-add-button">+ ADD STUDENT</a>
+<a href="{{ url_for('student.add_student') }}" class="custom-add-button">+ ADD STUDENT</a>
 
 <div class="table-container">
     <table>
